# conseilpy

./: .gitignore  LICENSE  README.md  example.py  pyproject.toml  requirements.txt  setup.py
api/: conseil.py  data_types.py  entity.py  exceptions.py
conseil/: __init__.py  api.py  core.py  query.py
conseilpy/: __init__.py  api.py  conseil.py  data_types.py  exceptions.py  utils.py
examples/: all_originated_accounts_which_are_smart_contracts.py  bakers_by_block_count_in_april_2019.py  blocks_by_end_user_transaction_count_in_april_2019.py  fees_by_block_level_transaction_kind_in_april_2019.py  number_of_transactions_by_type_in_april_2019.py  top_100_transactions_in_2019.py  top_10_contract_originators.py  top_10_most_active_contracts.py  top_20_account_controllers.py  top_20_account_controllers_by_balance.py  top_20_bakers_by_roll_count.py  top_50_bakers_by_delegator_balance.py  top_50_bakers_by_delegator_count.py
tests/: conseil_test.py  mock_api.py  test_aggregation.py  test_metadata.py  test_orderby.py  test_predicates.py  test_query.py  utils_test.py
