[tool.poetry]
name = "conseil"
version = "0.1"
description = "Python toolkit for Conseil blockchain indexer"
authors = ["aopoltorzhicky <aopoltorzhicky@gmail.com>", "m-kus <44951260+m-kus@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/baking-bad/conseilpy"
website = "https://cryptonomic.github.io/Conseil"
keywords = ["tezos", "blockchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
