[tool.poetry]
name = "conseil"
version = "0.1.3"
description = "Python toolkit for Conseil blockchain indexer"
license = "MIT"
authors = ["Michael Zaikin <mz@baking-bad.org>", "aopoltorzhicky <aopoltorzhicky@gmail.com>"]
readme = "README.md"
repository = "https://github.com/baking-bad/conseilpy"
keywords = ["tezos", "blockchain"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.6"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
